# OctoLLM

./: .gitignore  .gitleaks.toml  .pre-commit-config.yaml  .yamllint.yaml  ARCHITECTURE.md  CHANGELOG.md  CLAUDE.md  CODEOWNERS  CODE_OF_CONDUCT.md  CONTRIBUTING.md  CONTRIBUTORS.md  Cargo.toml  PR-SPRINT-1.3-DESCRIPTION.md  README.md  SECURITY.md  SPRINT-1.1-PROGRESS-SUMMARY.md  pyproject.toml
.devcontainer/: devcontainer.json
.github/: CODEOWNERS  PULL_REQUEST_TEMPLATE.md
.github/ISSUE_TEMPLATE/: bug_report.md  feature_request.md
.github/workflows/: build.yml  lint.yml  mdbook.yml  security.yml  test.yml
docs/: DOCUMENTATION-SUMMARY.md  README.md  book.toml
docs/adr/: 004-security-model.md  006-cloud-provider-selection.md  README.md
docs/api/: API-OVERVIEW.md  component-contracts.md
docs/api/collections/: octollm-insomnia-collection.json  octollm-postman-collection.json  octollm-postman-environment.json
docs/api/openapi/: coder.yaml  orchestrator.yaml  reflex-layer.yaml
docs/api/schemas/: RetrievalResult.md  ValidationResult.md
docs/architecture/: system-overview.md
docs/book/: 404.html  index.html  introduction.html  print.html  searchindex.js  toc.html  toc.js
docs/components/: orchestrator.md  reflex-layer.md
docs/development/: local-setup.md
docs/doc_phases/: PHASE-2-COMPLETE-SPECIFICATIONS.md  PHASE-3-COMPLETE-SPECIFICATIONS.md  PHASE-4-COMPLETE-SPECIFICATIONS.md
docs/engineering/: coding-standards.md  error-handling.md
docs/guides/: contributing.md  quickstart.md
docs/handoffs/: SPRINT-1.3-HANDOFF.md
docs/implementation/: debugging.md  getting-started.md  orchestrator-impl.md  testing-guide.md
docs/operations/: alert-response-procedures.md  disaster-recovery.md  docker-compose-setup.md  kubernetes-deployment.md  monitoring-alerting.md  performance-tuning.md  troubleshooting-playbooks.md  unraid-deployment-guide.md
docs/phases/: PHASE-0-README-ARCHIVE.md
docs/planning/: PHASE-1-ROADMAP.md  PHASE-1-SUCCESS-CRITERIA.md
docs/security/: capability-isolation.md  compliance.md  gitleaks-configuration-audit.md  secrets-management-strategy.md
docs/sprint-reports/: SPRINT-0.4-COMPLETION.md  SPRINT-0.5-COMPLETION.md  SPRINT-0.6-COMPLETION.md  SPRINT-0.6-CONSISTENCY-REVIEW.md  SPRINT-0.6-INTEGRATION-TESTING.md  SPRINT-0.6-STATUS-REPORT.md  SPRINT-0.7-COMPLETION.md  SPRINT-0.9-COMPLETION-REPORT.md
docs/src/: SUMMARY.md  introduction.md
docs/src/api/: rest-api.md  (+2 more)
docs/testing/: strategy.md
docs/validation/: cross-reference-validation-report.md
docs/workflow-plans/: sprint-0.3-cicd-plan.md
infra/: README.md  outputs.tf  terraform.tfvars.example  variables.tf  versions.tf
infrastructure/: README.md
infrastructure/docker-compose/: .env.example  .gitignore  docker-compose.dev.yml  prometheus.yml
infrastructure/secrets/: secret-definitions.yaml
infrastructure/unraid/: .env.unraid.example  .gitignore  DEPLOYMENT-SUMMARY.md  README.md  docker-compose.unraid.yml  setup-unraid.sh
ref-docs/: OctoLLM-Architecture-Implementation.md  OctoLLM-Concept_Idea.md  OctoLLM-Project-Overview.md
scripts/setup/: install-pre-commit.sh  setup-pre-commit.sh
sdks/python/octollm-sdk/: CHANGELOG.md  LICENSE  README.md  pyproject.toml
sdks/python/octollm-sdk/examples/: async_usage.py  authentication.py  basic_usage.py  error_handling.py
sdks/python/octollm-sdk/octollm_sdk/: __init__.py  auth.py  client.py  config.py  exceptions.py  models.py
sdks/python/octollm-sdk/octollm_sdk/services/: __init__.py  coder.py  executor.py  judge.py  orchestrator.py  planner.py  reflex.py  retriever.py  safety_guardian.py
sdks/python/octollm-sdk/tests/: __init__.py  test_auth.py  test_models.py
services/arms/executor/: Cargo.toml  Dockerfile  README.md
services/arms/executor/src/: main.rs
services/arms/planner/: Dockerfile  README.md  pyproject.toml
services/arms/planner/src/: __init__.py  config.py  main.py  models.py  planner.py  prompts.py
services/arms/planner/tests/: __init__.py  conftest.py  test_config.py  test_main.py  test_models.py  test_planner.py
services/orchestrator/: Dockerfile  README.md  pyproject.toml  setup.py
services/orchestrator/app/: __init__.py  config.py  database.py  main.py  models.py  planner_client.py  reflex_client.py  telemetry.py
services/orchestrator/tests/: __init__.py  conftest.py  test_config.py  test_database.py  test_main.py  test_models.py  test_reflex_client.py  test_reflex_client_additional.py
services/reflex-layer/: Cargo.toml  Dockerfile  PHASE3-DELIVERABLES.md  PHASE4-COMPLETION.md  PHASE5-DELIVERABLES.md  PHASE6-COMPLETION.md  PHASE7-COMPLETION.md  README.md
shared/: README.md
shared/rust/clients/: Cargo.toml
shared/rust/clients/src/: lib.rs
shared/rust/common/: Cargo.toml
shared/rust/common/src/: lib.rs
shared/rust/types/: Cargo.toml
shared/rust/types/src/: lib.rs
tests/: README.md  __init__.py
tests/e2e/: __init__.py
tests/integration/: __init__.py  test_placeholder.py
tests/unit/: __init__.py  test_placeholder.py
to-dos/: COMPLIANCE-CHECKLIST.md  MASTER-TODO.md  PHASE-0-1-ENHANCEMENT-SUMMARY.md  PHASE-0-PROJECT-SETUP.md  PHASE-0-SPRINT-0.1-HANDOFF.md  PHASE-2-CORE-CAPABILITIES.md  PHASE-5-SECURITY.md  PHASE-6-PRODUCTION.md  PRE-PHASE-0-READINESS-REPORT.md  README.md  REPOSITORY-SETUP-GUIDE.md  SECURITY-CHECKLIST.md  SPRINT-0.1-COMPLETION-REPORT.md  SPRINT-0.1-PROGRESS.md  SPRINT-0.2-READY.md  sprint-1.3-planner-arm.md
to-dos/status/: DOCUMENTATION-UPDATE-REPORT.md  PHASE-0-1-COMPLETION-REPORT.md  PHASE-0-1-EXECUTIVE-SUMMARY.md  PHASE-0-1-IMPLEMENTATION-GUIDE.md  PHASE-0-PROJECT-SETUP-ENHANCED.md  PHASE-0-SPRINT-0.1-HANDOFF.md  README.md  SPRINT-0.2-COMPLETION-REPORT.md  SPRINT-0.2-READY.md  SPRINT-0.2-UPDATE-2025-11-11.md  SPRINT-0.3-COMPLETE.md  SPRINT-0.3-READY.md  SPRINT-0.5-FINAL-STATUS.md  SPRINT-0.5-PROGRESS.md  SPRINT-0.5-STATUS.md  SPRINT-0.6-INITIAL-ANALYSIS.md  SPRINT-0.6-PROGRESS.md  SPRINT-0.7-PROGRESS.md  SPRINT-1.1-DAY-1-SUMMARY.md  SPRINT-1.1-IMPLEMENTATION-PLAN.md  SPRINT-1.2-PLAN.md  SPRINT-1.2-STATUS.md  TODO-GENERATION-SUMMARY.md  sprint-1.1-status.md
(+407 files in other folders)
