[tool.poetry]
name = "octollm"
version = "0.1.0"
description = "OctoLLM - Distributed AI Architecture for Offensive Security and Developer Tooling"
authors = ["OctoLLM Team"]
license = "Apache-2.0"
readme = "README.md"
homepage = "https://github.com/doublegate/OctoLLM"
repository = "https://github.com/doublegate/OctoLLM"
documentation = "https://github.com/doublegate/OctoLLM/tree/main/docs"
keywords = ["ai", "llm", "distributed-systems", "security", "octopus-inspired"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: Apache Software License",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Scientific/Engineering :: Artificial Intelligence",
    "Topic :: Security",
]
package-mode = false

[tool.poetry.dependencies]
python = "^3.11"
fastapi = "^0.121.2"
pydantic = "^2.12.4"
pydantic-settings = "^2.12.0"
uvicorn = {extras = ["standard"], version = "^0.38.0"}
httpx = "^0.28.1"
redis = "^5.2.1"
psycopg = {extras = ["binary", "pool"], version = "^3.2.3"}
sqlalchemy = "^2.0.36"
alembic = "^1.14.0"
qdrant-client = "^1.12.1"
openai = "^2.8.0"
anthropic = "^0.72.0"
langchain = "^1.0.5"
langchain-openai = "^1.0.2"
structlog = "^24.4.0"
prometheus-client = "^0.21.1"
pyjwt = {extras = ["crypto"], version = "^2.10.1"}
tenacity = "^9.0.0"
python-multipart = "^0.0.20"
python-dotenv = "^1.0.1"
presidio-analyzer = "^2.2.359"
presidio-anonymizer = "^2.2.359"
tiktoken = "^0.8.0"
starlette = "^0.47.2"

[tool.poetry.group.dev.dependencies]
pytest = "^9.0.1"
pytest-asyncio = "^1.3.0"
pytest-cov = "^6.0.0"
pytest-mock = "^3.14.0"
pytest-timeout = "^2.3.1"
black = "^25.11.0"
ruff = "^0.14.4"
mypy = "^1.18.2"
pre-commit = "^4.4.0"
ipython = "^8.31.0"
httpx = "^0.28.1"

[tool.poetry.group.test.dependencies]
pytest-benchmark = "^5.1.0"
faker = "^33.1.0"
hypothesis = "^6.123.4"
locust = "^2.32.4"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.black]
line-length = 100
target-version = ["py311", "py312"]
include = '\.pyi?$'
extend-exclude = '''
/(
  # directories
  \.eggs
  | \.git
  | \.hg
  | \.mypy_cache
  | \.tox
  | \.venv
  | build
  | dist
)/
'''

[tool.ruff]
line-length = 100
target-version = "py311"

[tool.ruff.lint]
select = [
    "E",   # pycodestyle errors
    "W",   # pycodestyle warnings
    "F",   # pyflakes
    "I",   # isort
    "C",   # flake8-comprehensions
    "B",   # flake8-bugbear
    "UP",  # pyupgrade
    "S",   # flake8-bandit (security)
    "T20", # flake8-print
]
ignore = [
    "E501",  # line too long (handled by black)
    "B008",  # do not perform function calls in argument defaults
    "S101",  # use of assert detected (pytest uses assert)
    "S104",  # possible binding to all interfaces
    "S608",  # possible SQL injection (false positives with SQLAlchemy)
]

[tool.ruff.lint.per-file-ignores]
"tests/**/*.py" = [
    "S101",  # assert allowed in tests
    "T20",   # print allowed in tests
]

[tool.mypy]
python_version = "3.11"
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = true
disallow_incomplete_defs = true
check_untyped_defs = true
no_implicit_optional = true
warn_redundant_casts = true
warn_unused_ignores = true
warn_no_return = true
strict_equality = true
plugins = ["pydantic.mypy"]

[[tool.mypy.overrides]]
module = [
    "redis.*",
    "qdrant_client.*",
    "langchain.*",
    "presidio_analyzer.*",
    "presidio_anonymizer.*",
]
ignore_missing_imports = true

[tool.pytest.ini_options]
minversion = "7.0"
addopts = "-ra -q --strict-markers --strict-config --cov=services --cov=shared/python --cov-report=term-missing --cov-report=html"
testpaths = ["tests"]
python_files = ["test_*.py", "*_test.py"]
python_classes = ["Test*"]
python_functions = ["test_*"]
asyncio_mode = "auto"
markers = [
    "slow: marks tests as slow (deselect with '-m \"not slow\"')",
    "integration: marks tests as integration tests",
    "e2e: marks tests as end-to-end tests",
    "performance: marks tests as performance tests",
    "security: marks tests as security tests",
]
timeout = 30
timeout_method = "thread"

[tool.coverage.run]
source = ["services", "shared/python"]
omit = [
    "*/tests/*",
    "*/test_*.py",
    "*/__pycache__/*",
    "*/migrations/*",
]

[tool.coverage.report]
precision = 2
show_missing = true
skip_covered = false
exclude_lines = [
    "pragma: no cover",
    "def __repr__",
    "raise AssertionError",
    "raise NotImplementedError",
    "if __name__ == .__main__.:",
    "if TYPE_CHECKING:",
    "@abstractmethod",
]

[tool.coverage.html]
directory = "htmlcov"

[tool.bandit]
exclude_dirs = ["/tests", "/venv", "/.venv", "/docs"]
skips = ["B101"]  # Skip assert_used (common in tests)
