[build-system]
requires = ["setuptools>=68.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "octollm-sdk"
version = "0.4.0"
description = "Python SDK for OctoLLM distributed AI architecture"
readme = "README.md"
requires-python = ">=3.11"
license = {text = "Apache-2.0"}
authors = [
    {name = "OctoLLM Core Team", email = "octollm@example.com"}
]
keywords = ["octollm", "ai", "distributed", "llm", "offensive-security"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: Apache Software License",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Software Development :: Libraries :: Python Modules",
]

dependencies = [
    "httpx>=0.28.1",
    "pydantic>=2.12.0",
    "python-dateutil>=2.9.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.3.4",
    "pytest-asyncio>=0.24.0",
    "pytest-cov>=6.0.0",
    "black>=25.11.0",
    "ruff>=0.14.4",
    "mypy>=1.14.1",
]

[project.urls]
Homepage = "https://github.com/octollm/octollm"
Documentation = "https://docs.octollm.example.com"
Repository = "https://github.com/octollm/octollm"
Issues = "https://github.com/octollm/octollm/issues"

[tool.setuptools.packages.find]
where = ["."]
include = ["octollm_sdk*"]

[tool.black]
line-length = 100
target-version = ['py311']

[tool.ruff]
line-length = 100
target-version = "py311"

[tool.mypy]
python_version = "3.11"
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = true

[tool.pytest.ini_options]
testpaths = ["tests"]
asyncio_mode = "auto"
